--- a/package.json
+++ b/package.json
@@ -2,10 +2,21 @@
   "name": "adventofcode2017",
   "version": "1.0.0",
   "description": "http://adventofcode.com/2017/about",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CharlesAMoss/adventofcode2017"
   },
   "author": "@charlesmoss",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1"
+  }
 }
